# gymvol

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  cmake_build.bat  cmake_make.bat  exercises2.json  gymvol.cpp  startpoint.json
gymvol/: CMakeLists.txt  exercise.hh  gymvol.cpp
